# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20221023145035_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
